--- a/README.me
+++ b/README.me
@@ -1,13 +1,13 @@
-# React-Express-Webpack-Boilerplate
-This is a webpack boilerplate which will save you 60 minutes if your are to configure it yourself
+# GraphQL-Hack-Task
+This is a web app which uses GraphQL and React
 
 
 
 
-1.`git clone https://github.com/Dragomirc/react-express-webpack-bolierplate.git`
+1.`https://github.com/Dragomirc/GraphQL-Hack-Task.git`
 
 2.`npm i`
 
-3.`npm run dev`
+3. Create a config.env file in the root folder and add the mssql configuration
 
-4. Add your components
+4. `npm run dev`
